[package]
name = "fire-up-the-oven-rust"
version = "0.1.0"
edition = "2021"
authors = ["Oonak Kanoo <a@b.c>"]
license = "MIT"
description = "Another Hello World"
repositorc = "https://github.com/ooonak/fire-up-the-oven-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
